--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Sudoku_helper"
         mc:Ignorable="d"
-        Title="MainWindow" Height="434" Width="800" ResizeMode="NoResize">
+        Title="Sudoku Helper" Height="434" Width="800" ResizeMode="NoResize">
     <Grid x:Name="mainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
